added song name to progress bar

--- a/browser/index.html
+++ b/browser/index.html
@@ -26,7 +26,7 @@
     <script src="/js/sidebar/sidebar.directive.js" defer></script>
     <script src="/js/player/player.directive.js" defer></script>
     <script src="/js/album/album.directives.js" defer></script>
-    <script src="/js/song/song.directive.js" defer></script>
+    <script src="/js/song/song.directives.js" defer></script>
   </head>
   <body ng-app="juke">
     <div id="main" class="container-fluid">
