--- a/browser/js/player/player.template.html
+++ b/browser/js/player/player.template.html
@@ -13,6 +13,7 @@
   <div class="bar">
     <div class="progress" ng-click="handleProgressClick($event)">
       <div class="progress-bar" ng-style="{width: getPercent() + '%'}"></div>
+      <p id="song-title-player">{{getCurrentSong().name}}</p>
     </div>
   </div>
 </div>
