--- a/browser/js/player/player.template.html
+++ b/browser/js/player/player.template.html
@@ -9,6 +9,9 @@
     <button class="btn btn-default" ng-click="next()">
       <span class="glyphicon glyphicon-step-forward"></span>
     </button>
+    <button ng-class="{active: isShuffling()}" class="btn btn-default" ng-click="random()">
+      <span class="glyphicon glyphicon-random"></span>
+    </button>
   </div>
   <div class="bar">
     <div class="progress" ng-click="handleProgressClick($event)">
